<resources>
    <string name="app_name">SportUp</string>

    <string name="start">Найти игру</string>
    <string name="lost_connection">Потеряно соединение с интернетом</string>
    <string name="location_error">Невозможно получить текущее местоположение</string>
    <string name="city_select">Выбор города</string>
    <string name="city_error">Вашего города нет в списке</string>
    <string name="items_search">Поиск</string>
    <string name="select_sport">Выберите вид спорта</string>

    <string name="search_sports">Поиск игр</string>
    <string name="my_games">Мои события</string>
    <string name="profile">Профиль</string>
    <string name="ruble_sign">" ₽"</string>
    <string name="events_on_map">Игры на карте</string>
    <string name="event_price">Стоимость участия</string>
    <string name="share_game">Поделиться игрой</string>
    <string name="description">Описание</string>
    <string name="players">Игроки</string>
    <string name="join">Принять участие</string>
    <string name="before_start">"До начала "</string>
    <string name="minute_code">" минут"</string>
    <string name="hours_code">" ч "</string>
    <string name="teams_code">" команды )"</string>
    <string name="completed">Завершено</string>
    <string name="leave">Отказаться</string>
    <string name="games_screen">Мои игры</string>
    <string name="delete">Удалить</string>
    <string name="accept">Принять</string>
    <string name="invite_code">Приглашения на события</string>
    <string name="created_events">Созданные игры</string>
    <string name="current_games">Текущие игры</string>
    <string name="closed_events">Завершённые игры</string>
    <string name="best_player">Лучший игрок</string>
    <string name="played_games">Сыграл игр</string>
    <string name="yellows">Нарушений</string>
    <string name="balance">Баланс счета</string>
    <string name="buy_tickets">Купить билеты</string>
    <string name="earn_tickets">Заработать билеты</string>
    <string name="_150">150 ₽</string>
    <string name="_100">100 ₽</string>
    <string name="_30">30 ₽</string>
    <string name="invite_friend">Пригласить друга</string>
    <string name="share_app">Поделиться</string>
    <string name="type_promocode">Ввести промокод</string>
    <string name="reply">Оставить отзыв</string>

    <string name="event_creation">Создание события</string>
    <string name="event_name">Название игры</string>
    <string name="date_and_time">Дата и время</string>
    <string name="game_end">Конец игры</string>
    <string name="game_type">Вид спорта</string>
    <string name="select">Выбрать</string>
    <string name="teams_quantity">Количество команд</string>
    <string name="players_quantity">Количество участников</string>
    <string name="membership_price">Цена участия</string>
    <string name="description_help">Указания по местоположению, правилах, покрытию поля и т.д.</string>
    <string name="add_description">Добавить описание игры</string>
    <string name="public_event">Публичное</string>
    <string name="event_location">Место проведения игры</string>
    <string name="event_name_error">Укажите название игры</string>
    <string name="wrong_event_date">Укажите дату и время начала</string>
    <string name="wrong_event_end_date">Укажите дату окончания игры</string>
    <string name="wrong_event_user_limit">Выберите количество участников</string>
    <string name="wrong_event_team_limit">Укажите количество команд</string>
    <string name="wrong_event_sport_type">Выберите вид спорта</string>
    <string name="error">Ошибка</string>
    <string name="ok">OK</string>
    <string name="wrong_event_location">Выберите адрес</string>
    <string name="input_hint">Стоимость</string>
    <string name="save">Продолжить</string>
    <string name="search">Поиск</string>
    <string name="address_select">Адрес игры</string>

    <string name="registration_browse">Регистрируясь в приложении, вы принимаете условия <u>Пользовательского соглашения</u></string>
    <string name="send">Отправить</string>
    <string name="reg">Регистрация</string>
    <string name="type_phone">Введите номер вашего телефона</string>
    <string name="code_send">На этот номер будет отправлен 5-значный код</string>
    <string name="code">Код подтверждения</string>
    <string name="empty_field">Поле не может быть пустым</string>
    <string name="wrong_code">Неверный код</string>
    <string name="wrong_phone">Неверный номер телефона</string>
    <string name="number_code">На номер</string>
    <string name="code_sent">" был отправлен код"</string>
    <string name="code_title">Введите код</string>
    <string name="lastName">Фамилия</string>
    <string name="first_name">Имя</string>
    <string name="login">Войти</string>
    <string name="password_help">Введите пароль для входа в закрытую игру</string>
    <string name="wrong_password">Неверный пароль</string>
    <string name="wrong_location">Неверное местоположение</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="update">Обновить</string>
    <string name="yet_not_ended">Игра еще не закончилась</string>
    <string name="not_selected">Не выбран</string>
    <string name="leave_item">Покинуть</string>
    <string name="no_team">Неопределившиеся игроки</string>
    <string name="players_list">Список игроков</string>
    <string name="choose_best_player">Выберите лучшего игрока</string>

    <string name="time_until_voting_ends">До завершения голосования %1$s ч %2$s мин</string>

    <string name="edit_event">Редактирование события</string>
    <string name="cancel_event">Отменить игру</string>
    <string name="set_password">Указать пароль</string>
    <string name="joined_code">"Учавствуют %1$s из %2$s"</string>
    <string name="select_password">Указать</string>
    <string name="private_event">Приватное</string>
    <string name="password">Пароль</string>
    <string name="password_error">Пароль не указан</string>
    <string name="free">Бесплатно</string>
    <string name="city_not_found">Не нашли свой город?</string>
    <string name="city_not_found_helper">Оставьте контактные данные и мы оповестим вас, когда сервис станет доступен в вашем городе</string>
    <string name="city">Город</string>
    <string name="phone">Номер телефона</string>
    <string name="send_code">ОТПРАВИТЬ</string>
    <string name="back_code">НАЗАД</string>
    <string name="wrong_phone_code">Неверно введен номер телефона</string>
    <string name="wrong_city_code">Неверно введен город</string>
    <string name="promo_hint">Промокод</string>
    <string name="promo_help">Введите промокод</string>
    <string name="congratulations">Поздравляем</string>
    <string name="you_are_best_player">Вы признаны лучшим игроком</string>
    <string name="your_price">Вы получаете в подарок</string>
    <string name="delete_event">Удаление события</string>
    <string name="are_you_sure">Вы уверены?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <plurals name="places">
        <item quantity="zero">0 площадок</item>
        <item quantity="one">%1$d площадка</item>
        <item quantity="two">%1$d площадки</item>
        <item quantity="few">%1$d площадки</item>
        <item quantity="many">%1$d площадок</item>
        <item quantity="other">%1$d площадок</item>
    </plurals>

    <plurals name="events">
        <item quantity="zero">0 игр</item>
        <item quantity="one">%1$d игра</item>
        <item quantity="two">%1$d игры</item>
        <item quantity="few">%1$d игры</item>
        <item quantity="many">%1$d игр</item>
        <item quantity="other">%1$d игр</item>
    </plurals>

    <plurals name="days">
        <item quantity="zero">0 дней</item>
        <item quantity="one">%1$d день</item>
        <item quantity="two">%1$d дня</item>
        <item quantity="few">%1$d дня</item>
        <item quantity="many">%1$d дней</item>
        <item quantity="other">%1$d дней</item>
    </plurals>
</resources>
