<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView android:layout_width="wrap_content"
              android:textSize="16sp"
              android:layout_marginTop="12dp"
              android:layout_marginRight="12dp"
              android:layout_marginEnd="12dp"
              android:text="@string/city_not_found_helper"
              android:layout_height="wrap_content"/>

    <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/greyColor"
            android:inputType="textCapWords"
            android:textSize="16sp"
            android:lines="1"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:hint="@string/city"
            android:ems="10"
            android:id="@+id/editText2"
            app:met_underlineColor="@color/greyColor"
            app:met_baseColor="@color/blackColor"
            app:met_textColor="@color/blackColor"
            app:met_errorColor="@color/blackColor"
            app:met_floatingLabel="normal"
            app:met_helperTextColor="@color/greyColor"
            app:met_primaryColor="@color/blackColor"
            android:textColorHint="@color/greyColor"
            android:layout_gravity="bottom" />

    <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/greyColor"
            android:textSize="16sp"
            android:lines="1"
            android:inputType="phone"
            android:hint="@string/phone"
            android:ems="10"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="8dp"
            android:id="@+id/editText"
            app:met_underlineColor="@color/greyColor"
            app:met_baseColor="@color/blackColor"
            app:met_textColor="@color/blackColor"
            app:met_errorColor="@color/blackColor"
            app:met_floatingLabel="normal"
            app:met_helperTextColor="@color/greyColor"
            app:met_primaryColor="@color/blackColor"
            android:textColorHint="@color/greyColor"
            android:layout_gravity="bottom" />
</LinearLayout>