<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:id="@+id/main_dialog_part"
    android:layout_margin="12dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:gravity="center"
        android:src="@drawable/icon_lock"
        android:layout_marginStart="24dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="26dp"
        android:layout_height="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/password_help"
        android:textColor="#727272"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:id="@+id/promo_help_text"
        android:gravity="center"
        android:layout_marginStart="24dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="26dp"
        android:layout_height="wrap_content"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_height="wrap_content">

        <EditText android:layout_width="match_parent"
            android:textSize="18sp"
            android:hint="@string/password"
            android:maxLength="5"
            android:imeOptions="actionDone"
            android:textColorHint="#727272"
            android:textColorHighlight="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:id="@+id/passwordEdit"
            android:gravity="center"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/passwordButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="-8dp"
        android:layout_marginLeft="-12dp"
        android:layout_marginRight="-12dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="14sp" />
</LinearLayout>
