<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="#ffffff"
              android:id="@+id/main_dialog_part"
              android:layout_gravity="center"
              android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backBtn"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:scaleType="centerInside"
        android:src="@drawable/icon_nav_cansel_black"
        android:layout_gravity="start"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/promo_help"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:id="@+id/promo_help_text"
            android:gravity="center"
            android:layout_marginStart="24dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="26dp"
            android:layout_height="wrap_content"/>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">

            <EditText android:layout_width="match_parent"
                android:textSize="20sp"
                android:hint="@string/promo_hint"
                android:maxLength="20"
                android:imeOptions="actionDone"
                android:textColorHint="#727272"
                android:textColorHighlight="#212121"
                android:textColor="#212121"
                android:letterSpacing="0.04"
                android:inputType="textCapCharacters"
                android:id="@+id/promo_text"
                android:gravity="center"
                android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/promo_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/send"
            android:textColor="#ffffff"
            android:textSize="14sp"
            />
    </LinearLayout>
</FrameLayout>
