<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
             android:orientation="vertical"
             android:id="@+id/main"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:contentInsetStart="0dp"
                android:contentInsetLeft="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                android:minHeight="?attr/actionBarSize">
            <FrameLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/action_bar">

                <ImageView
                        android:id="@+id/back_btn"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:layout_width="56dp"
                        android:layout_height="match_parent"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_back"
                        android:padding="13dp"
                        android:layout_gravity="start"
                />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/address_select"
                        android:layout_gravity="center"
                        android:id="@+id/date_text_view"
                        android:gravity="center_vertical"
                        android:typeface="sans"
                        android:textSize="22sp"
                        android:textColor="#ffffff" />

            </FrameLayout>
        </android.support.v7.widget.Toolbar>

        <FrameLayout android:layout_width="match_parent"
                     android:layout_height="56dp">
            <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:ellipsize="start"
                    android:id="@+id/search_box"
                    android:gravity="center"
                    android:hint="@string/search"
                    android:maxLines="1"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:background="#3fffffff"
                    android:layout_height="40dp"/>
        </FrameLayout>
    </android.support.design.widget.AppBarLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/scroll"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="112dp"
              android:name="ru.binaryblitz.SportUp.custom.CustomMapFragment$MySupportMapFragment"/>
    <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:theme="@style/BrandButtonStyle"
            android:layout_width="wrap_content"
            android:text="@string/save"
            android:gravity="center"
            android:layout_gravity="center_horizontal|bottom"
            android:textColor="#ffffff"
            android:id="@+id/add_btn"
            android:textSize="18sp"
            android:layout_marginBottom="24dp"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:paddingEnd="22dp"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:paddingStart="22dp"/>
</FrameLayout>
